--- a/frontend/src/components/pages/Cart.css
+++ b/frontend/src/components/pages/Cart.css
@@ -21,6 +21,8 @@
     margin-top: 2rem;
     margin-left: 5%;
     margin-right: 5%;
+    border-radius: 1px solid #ccc;
+    border-radius: 10px;
 
 }   
 
