--- a/frontend/src/components/pages/ItemPage/ItemPage.css
+++ b/frontend/src/components/pages/ItemPage/ItemPage.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .reviews-summary .text-center .btn {
