Fixed issue where ReviewForm wasn't expanding properly

--- a/frontend/src/components/pages/ItemPage/ItemPage.css
+++ b/frontend/src/components/pages/ItemPage/ItemPage.css
@@ -4,8 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-family: 'Montserrat', sans-serif;
+  height: auto;
 }
 
 .reviews-summary .text-center .btn {
